--- a/week1/1장 - HTTP개관/이우성.md
+++ b/week1/1장 - HTTP개관/이우성.md
@@ -23,3 +23,31 @@
 단순한 페이지의 정보만을 넘겨주기에는 웹 기술들(반응형 웹, 애니메이션 인터랙션 등)이 많이 발전했다. 뿐만아니라 웹에서 데이터 처리할 일이 많이 늘어나면서 현재는 데이터를 json 형태로 많이 주고 받게 되었다.
 
 이러한 많은 형태의 json 데이터들을 편하게 처리하기 위해 HTTP 메서드가 나왔다고 생각하는데, 위의 짧지 않은 영상을 보면서 생각을 더 정리해 봐야겠다.
+
+5. REST API 꼭 필요할까?
+
+얼마전 회사에서 REST API가 꼭 필요할까? 라는 질문을 받게 되었고, 그리고 get/post만으로도 API 명세서를 다 만들 수 있으며 엔드포인트로 API의 역할을 명확하게 만들어주는 것이 더 개발하는데 용이하지 않냐라는 질문을 받았다. 즉 다음과 같다.
+
+- POST /user HTTP/1.1
+- DELETE /user HTTP/1.1
+
+두 개의 API 명세가 있을 때 POST API는 유저를 추가하는 API이고, DELETE API는 유저를 삭제하는 API이다. 그렇다면 API 명세서를 다음과 같이 만들자는 뜻이다.
+
+- POST /create/user HTTP/1.1
+- POST /delete/user HTTP/1.1
+
+엔드포인트로 API의 역할을 구분해서 요청할 때도, 응답을 받을 때도 엔드포인트만으로 어떤 트랜잭션이 일어나는지 파악하자는 뜻이었다. 이 부분에 대해서 스터디분들과 이야기를 나눠보고 싶었고, 이 주제로 토론을 나누게 되었다.
+
+팀원분들도 사이드 프로젝트를 하면서 GET/POST만으로 개발을 하신 경험이 있다고 했다. 다른 한 분께서 [HTTP 1.1 RFC 문서(RFC-2616)](https://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html)에 나와 있듯이, 특정 메서드들은 멱등성을 보장해야 하기 때문에 옳은 선택일까? 라는 의견을 내주셨다.
+
+사실 나는 메서드를 어떻게 활용할 것인가는 해당 팀 내의 팀원들이 REST API를 어떻게 받아들이는지, 프로젝트 상황이 어떠한지에 따라 다르다고 생각한다. 결국 개발은 팀원들과 같이 하는 것이기 때문에 이러한 방법들에 대해서는 정답이 없는 것 같다고 느껴진다. 우리 팀원들이 REST API에 대해 회의적이며, 엔드포인트로 명확하게 구분지어서 클라이언트와 서버가 트랜잭션하는 것이 더 좋다고 받아들이면 그것이 좋은 것이다.
+
+실제로 최근부터 우리 회사 팀내에서 2번째 방법인 엔드포인트로 API를 구분지어서 사용하고 있다. 어플리케이션이 더 복잡해지고 API만 몇 십개, 몇 백개가 있는 상황에서 엔드포인트만으로 API의 역할을 파악할 수 있어서 개인적으로 개발하는데 용이하다고 생각하고 있다.
+
+<br />
+
+6. 브라우저에서 url을 입력했을 때 사용자에게 리소스를 보여주기 까지의 과정과 상태코드를 연결지어서 이야기 해본다면?
+
+이 부분은 면접이라고 생각하지 않고 이야기하듯이 말해보았다. 사용자가 브라우저 주소창에 url을 입력하면 브라우저는 서버에게 html 요청과 함께 응답을 받을텐데, 이때 만약 해당 url이 웹 캐싱이 되어있다면 거기서 문서를 가져오고, 그렇지 않다면 DNS 시스템을 따른다고 말했다. 현재는 알아보기 힘든 호스트 명으로 되어 있고, 이걸 DNS를 통해서 IP로 변환한다. 이후에 브라우저는 서버로부터 HTTP 응답을 받고, 문서를 보여준다. 하지만 이 대답에는 한가지 빼먹었다. 바로 TCP 커넥션이다.
+
+DNS 시스템에 따라 IP 주소로 변환하고 클라이언트와 서버는 TCP 커넥션을 통해 요청과 응답을 주고 받는다. 이 부분에 대해서 정말 깊게 다룬 블로그를 추천 받았다! 👉 [CLOSE_WAIT & TIME_WAIT 최종 분석](https://tech.kakao.com/2016/04/21/closewait-timewait/) 이 블로그에는 TCP 연결 과정과 TCP 커넥션을 다루는 방법까지 자세하게 나와있다. JAVA 코드를 아직 이해하지 못하고, 백엔드 지식이 부족한 나에게는 읽기 힘든 아티클이었지만 TCP 개념을 다시 잡기에는 좋은 글이었다.
