--- a/week1/1장 - HTTP개관/김수빈.md
+++ b/week1/1장 - HTTP개관/김수빈.md
@@ -31,4 +31,14 @@
  요청되는 데이터 처리는 기본적으로 CRUD (생성,읽기,쓰기(수정),삭제)로 이루어지는데 이런 메소드로 api를 만들어 자료를 받을 수 있게 발전 
  
  -> RESTful API
+ 
+ ++ 4/30 나머지 부분 추가
+ 
+ - 브라우저에 URL을 입력했을 때 발생하는 일들 설명시 책 내용에 있는 트랜잭션과 상태코드를 포함해서 설명해본다면?!
+ 
+ 실제 면접때 같은 질문을 받은 적이 있는데 그 당시 답변-> 
+ 
+ <도메인 입력시 dns에서 도메인에 맞는 IP로 변환해주고 그것을 이용하여 서버와 클라이언트가 연결된다. 그 후 클라이언트쪽에서 요청 메세지를 보내면 서버에서 받아 요청에 맞게 데이터 처리 후 응답 메세지에 담아 보내면 브라우저에 출력되게 된다>
+
+여기서 서버와 클라이언트 요청 응답 과정 앞에 "요청과 응답으로 구성된 트랜잭션이 일어나게되는데"를 추가하고 과정 설명 중 응답메세지 부분에서 "요청 처리에 따른 HTTP상태코드를 포함한 응답 메세지를 보내면" 이라고 포함시켜서 말할 것 같다 
   
